<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    tools:context=".activities.ContactUs">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent">

        <TextView
            android:id="@+id/contact_us_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="right|center"
            android:layout_marginLeft="4dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/ic_back"
            android:padding="3dp" />

        <TextView
            android:id="@+id/contact_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:gravity="center"
            android:text="@string/contact_us"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:padding="3dp">

        <EditText
            android:id="@+id/contact_name_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/black_ed_txt_bg"
            android:drawableStart="@drawable/profile"
            android:drawablePadding="5dp"
            android:ellipsize="end"
            android:gravity="right"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLines="2"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/contact_email_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/black_ed_txt_bg"
            android:drawableStart="@drawable/ic_white_email"
            android:drawablePadding="5dp"
            android:gravity="right"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="2"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/message_title_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/black_ed_txt_bg"
            android:drawablePadding="5dp"
            android:gravity="right"
            android:hint="@string/message_title"
            android:inputType="text"
            android:maxLines="1"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/black_ed_txt_bg">

            <EditText
                android:id="@+id/msg_txt_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:gravity="right"
                android:hint="@string/message_txt"
                android:inputType="text"
                android:maxLines="5"
                android:padding="12dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </FrameLayout>

        <!--<Button-->
        <!--android:id="@+id/send_msg_id"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="45dp"-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:layout_marginBottom="5dp"-->
        <!--android:background="@drawable/btn_bg"-->
        <!--android:text="@string/send"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:textSize="18sp"-->
        <!--android:textStyle="bold" />-->

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/send_msg_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_bg"
            android:text="@string/send"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_padding="6dp"
            app:spinning_bar_width="3dp" />
    </LinearLayout>

</LinearLayout>