<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    tools:context="com.homFood.activities.Settings">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent">

        <TextView
            android:id="@+id/settings_back_id"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="right|center"
            android:layout_marginLeft="4dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/ic_back"
            android:padding="3dp" />

        <TextView
            android:id="@+id/contact_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:gravity="center"
            android:text="@string/settings_info"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="4dp">

        <FrameLayout
            android:id="@+id/settings_image_layout_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="3dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/ic_photo"
                android:visibility="gone" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image_id"
                android:layout_width="100dp"
                android:layout_height="96dp"
                android:src="@drawable/profile"
                app:civ_border_color="#FFffffff"
                app:civ_border_width="1dp" />

        </FrameLayout>

        <EditText
            android:id="@+id/profile_name_ed_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/black_ed_txt_bg"
            android:drawableStart="@drawable/profile"
            android:drawablePadding="5dp"
            android:gravity="right"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/profile_email_ed_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:autofillHints=""
            android:background="@drawable/black_ed_txt_bg"
            android:drawableStart="@drawable/ic_white_email"
            android:drawablePadding="5dp"
            android:gravity="right"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/profile_phone_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:autofillHints=""
            android:background="@drawable/black_ed_txt_bg"
            android:drawableStart="@drawable/ic_white_phone"
            android:drawablePadding="5dp"
            android:gravity="right"
            android:hint="@string/phone"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/profile_pass_ed_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:autofillHints=""
            android:background="@drawable/black_ed_txt_bg"
            android:drawableStart="@drawable/ic_white_lock"
            android:drawablePadding="5dp"
            android:gravity="right"
            android:hint="@string/password"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/settings_confirm_pass_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:autofillHints=""
            android:background="@drawable/black_ed_txt_bg"
            android:drawableStart="@drawable/ic_white_lock"
            android:drawablePadding="5dp"
            android:gravity="right"
            android:hint="@string/confirm_password"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <!--<Button-->
            <!--android:id="@+id/save_info_btn_id"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="45dp"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--android:background="@drawable/btn_bg"-->
            <!--android:text="@string/save"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:textSize="18sp"-->
            <!--android:textStyle="bold" />-->


        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/save_info_btn_id"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_bg"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_padding="6dp"
            app:spinning_bar_width="3dp" />
    </LinearLayout>
</LinearLayout>