<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    android:layoutDirection="rtl"
    tools:context=".activities.CheckCoupon">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/forget_pass_back_id"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="right|center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="7dp"
            android:background="@drawable/ic_back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginRight="65dp"
            android:gravity="center"
            android:text="@string/have_acoupon"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="bold" />
    </FrameLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#ffffff"
        android:padding="6dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/coupon_code_ed_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:hint="@string/enter_your_coupon"
                    android:inputType="numberSigned"
                    android:maxLines="2" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/send_coupon_code_btn_id"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/cart_details_btn_bg"
                    android:text="@string/send"
                    android:textColor="@android:color/white"
                    android:textSize="17sp" />

                <Button
                    android:id="@+id/exit_btn_id"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:text="@string/exit"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>